--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "start": "^5.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
